# AMPM

./: .env.example  .gitignore  README.md  SCRIPTS.md  app.py  pyproject.toml  requirements.txt  run.py  run_meet.py  run_meeting.sh  run_voice.sh  run_webapp.sh  test_webapp.sh
ampm/: __init__.py  bot.py  knowledge.py  meet_bot.py  models.py
ampm/agents/: __init__.py  action_agent.py  decision_agent.py  meeting_agent.py
ampm/core/: __init__.py  embeddings.py  graph.py  query.py  ripple.py
ampm/ingest/: __init__.py  loader.py
ampm/interfaces/: __init__.py  meet_bot.py  voice_bot.py
data/: sample_meetings.json
data/samples/: README.md  architecture_review_auth_2026_04_12.json  blueprint_auth_architecture_2026_04_15.json  customer_feedback_2026_05_10.json  design_review_2026_05_03.json  engineering_standup_2026_05_06.json  incident_postmortem_2026_04_28.json  prd_authentication_2026_04_10.json  product_roadmap_2026_04_15.json  sprint_planning_2026_05_01.json  stakeholder_sync_2026_05_08.json  technical_review_2026_04_22.json  workorders_auth_2026_04_20.json
docs/architecture/: ARCHITECTURE.md
docs/demo/: DEMO.md
docs/pitch/: PITCH.md
docs/tasks/: TASKS.md
samples/: README.md  technical_review_2026_04_22.json
scripts/: run_demo.sh  run_live.sh  run_tests.sh  run_voice.sh  run_webapp.sh
tests/: __init__.py
